--- a/views/planning_conflicts.erb
+++ b/views/planning_conflicts.erb
@@ -1,5 +1,5 @@
 <div class="top-navigation-bar">
-  <h2 class="entity-title"><%=t.booking_settings.form.backoffice_configuration_title%></h2>
+  <h2 class="entity-title">Conflictos en el planning</h2>
 </div>
 
 <div class="admin_content_wrapper" style="background-color: #f5f5f5; margin: 0">
