--- a/views/report_finances_started_reservations.erb
+++ b/views/report_finances_started_reservations.erb
@@ -1,14 +1,14 @@
 <div class="top-navigation-bar">
-  <h2 class="entity-title"><%=t.report_finances_finished_reservations.title%></h2>
+  <h2 class="entity-title"><%=t.report_finances_started_reservations.title%></h2>
   <div class="form-button" style="float: right">
-    <a id="print_link" href="/admin/booking/reports/finances-finished-reservations-csv" target="_blank">Excel</a>
+    <a id="print_link" href="/admin/booking/reports/finances-started-reservations-csv" target="_blank">Excel</a>
   </div>
 </div>
 <div class="admin_content_wrapper" style="background-color: #f5f5f5; margin: 0">
   <div class="content">
     <div class="container_12">
       <div class="grid_6">
-        <form name="report_reservations_form" action="/admin/booking/reports/finances-finished-reservations" method="get">
+        <form name="report_reservations_form" action="/admin/booking/reports/finances-started-reservations" method="get">
           <div class="formrow">
             <div style="display: inline-block">
               <input type="text" name="date_from" id="date_from" class="fieldcontrol date_control" maxlength="10" autocomplete="off"/>
@@ -59,7 +59,7 @@
                 </tr>
                 <% total += reservation.total_cost %>
             <% end %>
-            <tr class="table-row">
+            <tr class="table-row success">
               <td class="table-cell"><strong>TOTAL</strong></td>
               <td class="table-cell"></td>
               <td class="table-cell"></td>
