export finished reservation to excel column notes separator + planning manual assignation show color + edit pickup/return place custom line break

--- a/views/_booking_planning.js.erb
+++ b/views/_booking_planning.js.erb
@@ -993,7 +993,8 @@ require(['YSDFormatter', 'jquery', 'ysdtemplate', 'YSDGui', 'jquery.ui', 'jquery
               requested_item_id: bookingPlanningModel.assignationResourceData.bookingCategory,
               notes: null,
               title: bookingPlanningModel.assignationResourceData.bookingCustomer,
-              planning_color: 'rgb(102, 255, 102)'
+              planning_color: 'rgb(102, 255, 102)',
+              confirmed: bookingPlanningModel.assignationResourceData.bookingConfirmed
           };
         bookingPlanningModel.planningData.push(item);
 
