change return place not updated

--- a/views/booking_edit_pickupreturn.js.erb
+++ b/views/booking_edit_pickupreturn.js.erb
@@ -148,7 +148,7 @@
                    bookingRequest.pickup_place_other = bookingRequest.pickup_place_other.replace('<br>', '\n');
                }
                if (bookingRequest.return_place) {
-                   bookingRequest.return_place = bookingRequest.pickup_place.replace('<br>', '\n');
+                   bookingRequest.return_place = bookingRequest.return_place.replace('<br>', '\n');
                }
                if (bookingRequest.return_place_other) {
                    bookingRequest.return_place_other = bookingRequest.return_place_other.replace('<br>', '\n');
