--- a/views/booking_categories_management.js.erb
+++ b/views/booking_categories_management.js.erb
@@ -31,11 +31,18 @@ require(["jquery", "YSDEntityManagement", "YSDEntityManagementComplementHooks",
         $('head').append(dom.find('script:not([src])'));
       });
       
-      // Embed stock
+      // Embed stock or item editor
       if (entity.type == 'category_of_resources') {
           $.ajax({url: '/admin/booking/stock/' + entity.code, dataType: 'text'}).done(function (html) {
               var dom = $('<html />').prop('innerHTML', html);
               $('#stock_detail_container').html(dom.find('body #page_wrapper'));
+              $('head').append(dom.find('script:not([src])'));
+          });
+      }
+      else if (entity.type == 'resource') {
+          $.ajax({url: '/admin/booking/booking-items/' + entity.code + '/edit', dataType: 'text'}).done(function (html) {
+              var dom = $('<html />').prop('innerHTML', html);
+              $('#booking_item_editor').html(dom.find('body #page_wrapper'));
               $('head').append(dom.find('script:not([src])'));
           });
       }
